crates/core/tests/snapshots/bun_unpack__bun_cjs_interop_unpack.snap
---
source: crates/core/tests/bun_unpack.rs
expression: combined
---
// === src-cjs/math.js ===
let __wakaru_require_math_cache;
export function require_math() {
    if (__wakaru_require_math_cache) {
        return __wakaru_require_math_cache.exports;
    }
    const exports = {};
    const module = {
        exports
    };
    __wakaru_require_math_cache = module;
    function add(a, b) {
        return a + b;
    }
    function multiply(a, b) {
        return a * b;
    }
    module.exports = {
        add,
        multiply
    };
    return module.exports;
}

// === src-cjs/logger.js ===
let __wakaru_require_logger_cache;
export function require_logger() {
    if (__wakaru_require_logger_cache) {
        return __wakaru_require_logger_cache.exports;
    }
    const exports = {};
    const module = {
        exports
    };
    __wakaru_require_logger_cache = module;
    class Logger {
        constructor(prefix){
            this._prefix = prefix || "";
        }
        info(msg) {
            console.log(`[INFO] ${this._prefix}${msg}`);
        }
        warn(msg) {
            console.warn(`[WARN] ${this._prefix}${msg}`);
        }
    }
    module.exports = Logger;
    module.exports.Logger = Logger;
    return module.exports;
}

// === entry.js ===
import { require_logger } from "./src-cjs/logger.js";
import { require_math } from "./src-cjs/math.js";
const __hasOwnProp = Object.prototype.hasOwnProperty;
function __accessProp(key) {
    return this[key];
}
let __toESMCache_node;
let __toESMCache_esm;
const __toESM = (mod, isNodeMode, target)=>{
    var canCache = mod != null && typeof mod === "object";
    if (canCache) {
        var cache = isNodeMode ? __toESMCache_node ??= new WeakMap : __toESMCache_esm ??= new WeakMap;
        var cached = cache.get(mod);
        if (cached) {
            return cached;
        }
    }
    target = mod != null ? Object.create(Object.getPrototypeOf(mod)) : {};
    const to = isNodeMode || !mod || !mod.__esModule ? Object.defineProperty(target, "default", {
        value: mod,
        enumerable: true
    }) : target;
    for (let key of Object.getOwnPropertyNames(mod)){
        if (!__hasOwnProp.call(to, key)) {
            Object.defineProperty(to, key, {
                get: __accessProp.bind(mod, key),
                enumerable: true
            });
        }
    }
    if (canCache) {
        cache.set(mod, to);
    }
    return to;
};
const import_math = __toESM(require_math(), 1);
function capitalize(str) {
    if (!str) {
        return "";
    }
    return str.charAt(0).toUpperCase() + str.slice(1);
}
function truncate(str, maxLen) {
    if (str.length <= maxLen) {
        return str;
    }
    return `${str.slice(0, maxLen - 3)}...`;
}
const $capitalize = capitalize;
const $truncate = truncate;
const import_logger = __toESM(require_logger(), 1);
const CHANGE = "change";
class Store {
    constructor(initial){
        this._data = {
            ...initial
        };
        this._subs = [];
    }
    get(key) {
        return this._data[key];
    }
    set(key, value) {
        const old = this._data[key];
        this._data[key] = value;
        if (old !== value) {
            this._notify(CHANGE, {
                key,
                old,
                value
            });
        }
    }
    subscribe(fn) {
        this._subs.push(fn);
    }
    _notify(type, payload) {
        for(let i = 0; i < this._subs.length; i++){
            this._subs[i](type, payload);
        }
    }
}
const $Store = Store;
const $CHANGE = CHANGE;
const log = new import_logger.default("app: ");
async function main() {
    log.info("Starting app");
    const items = [
        10,
        20,
        30,
        40,
        50
    ];
    const total = items.reduce((sum, item)=>import_math.add(sum, item), 0);
    const avg = import_math.multiply(total, 1 / items.length);
    const label = $truncate($capitalize("average value"), 10);
    log.info(`${label}: ${avg}`);
    const store = new $Store({
        count: 0
    });
    store.subscribe((type, payload)=>{
        if (type === $CHANGE) {
            log.info(`${payload.key} = ${payload.value}`);
        }
    });
    store.set("count", total);
    return {
        total,
        avg,
        label
    };
}
export { main };
